--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "Unlicense",
   "devDependencies": {
     "electron": "^2.0.3",
+    "mocha": "^5.2.0",
     "multichain-api": "^1.0.0-alpha.8",
     "multichain-node": "^2.1.6-version1.0.2",
     "open-file-text-editor": "0.0.1"
@@ -23,6 +24,7 @@
     "multichain-api": "^1.0.0-alpha.8",
     "multichain-node": "^2.1.6-version1.0.2",
     "bluebird": "^3.5.1",
+    "mocha": "^5.2.0",
     "bootstrap": "^4.0.0-beta.3",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.9",
